force-app/main/default/objects/Slowly_Changing_Dimension__c/Slowly_Changing_Dimension__c.object-meta.xml
<CustomObject>
    <description>Enables display and search of changes which occur slowly and unpredictably over time - such as a person&apos;s family name.</description>
    <label>Slowly Changing Dimension</label>
    <nameField>
        <displayFormat>SCD-{0000000}</displayFormat>
        <label>Slowly Changing Dimension</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slowly Changing Dimension</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>