force-app/main/default/objects/Slowly_Changing_Dimension__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Previous Name</relationshipLabel>
    <relationshipName>Slowly_Changing_Dimension</relationshipName>
    <type>Lookup</type>
</CustomField>