force-app/main/default/objects/Slowly_Changing_Dimension__c/fields/Admin_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Admin_Org_Name__c</fullName>
    <label>Admin Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>