force-app/main/default/objects/Slowly_Changing_Dimension__c/fields/Aged_Care_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Aged_Care_Organisation_Name__c</fullName>
    <label>Aged Care Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>