force-app/main/default/objects/Slowly_Changing_Dimension__c/fields/CHSP_Name__c.field-meta.xml
<CustomField>
    <fullName>CHSP_Name__c</fullName>
    <label>CHSP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>