force-app/main/default/objects/Slowly_Changing_Dimension__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Previous Name</relationshipLabel>
    <relationshipName>Slowly_Changing_Dimension</relationshipName>
    <type>Lookup</type>
</CustomField>