force-app/main/default/objects/Slowly_Changing_Dimension__c/fields/Date_Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Date_Effective_To__c</fullName>
    <label>Date Effective To</label>
    <type>Date</type>
</CustomField>