force-app/main/default/objects/Slowly_Changing_Dimension__c/fields/Management_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Management_Company_Name__c</fullName>
    <label>Management Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>