force-app/main/default/objects/Slowly_Changing_Dimension__c/fields/Name_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Name_Effective_Date__c</fullName>
    <label>Name Effective Date</label>
    <type>Date</type>
</CustomField>