force-app/main/default/objects/Slowly_Changing_Dimension__c/fields/NATSIFAC_Name__c.field-meta.xml
<CustomField>
    <fullName>NATSIFAC_Name__c</fullName>
    <label>NATSIFAC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>