force-app/main/default/objects/Slowly_Changing_Dimension__c/fields/Second_Name__c.field-meta.xml
<CustomField>
    <fullName>Second_Name__c</fullName>
    <label>Second Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>