force-app/main/default/objects/Slowly_Changing_Dimension__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Slowly Changing Dimension</relationshipLabel>
    <relationshipName>Slowly_Changing_Dimension</relationshipName>
    <type>Lookup</type>
</CustomField>