force-app/main/default/objects/Slowly_Changing_Dimension__c/fields/Service_Delivery_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Organisation_Name__c</fullName>
    <label>Service Delivery Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>