force-app/main/default/objects/Slowly_Changing_Dimension__c/recordTypes/Account_Previous_Name_SCD.recordType-meta.xml
<RecordType>
    <fullName>Account_Previous_Name_SCD</fullName>
    <active>true</active>
    <label>Account Previous Name</label>
</RecordType>