force-app/main/default/objects/Slowly_Changing_Dimension__c/recordTypes/Admin_Org_Name.recordType-meta.xml
<RecordType>
    <fullName>Admin_Org_Name</fullName>
    <active>true</active>
    <label>Admin Org Name</label>
</RecordType>