force-app/main/default/objects/Slowly_Changing_Dimension__c/recordTypes/Aged_Care_Organisation_Name.recordType-meta.xml
<RecordType>
    <fullName>Aged_Care_Organisation_Name</fullName>
    <active>true</active>
    <label>Aged Care Organisation Name</label>
</RecordType>