force-app/main/default/objects/Slowly_Changing_Dimension__c/recordTypes/CHSP_Name.recordType-meta.xml
<RecordType>
    <fullName>CHSP_Name</fullName>
    <active>true</active>
    <label>CHSP Name</label>
</RecordType>