force-app/main/default/objects/Slowly_Changing_Dimension__c/recordTypes/Contact_Alias_Name.recordType-meta.xml
<RecordType>
    <fullName>Contact_Alias_Name</fullName>
    <active>true</active>
    <description>Contact Alias Name</description>
    <label>Contact Alias Name</label>
</RecordType>