force-app/main/default/objects/Slowly_Changing_Dimension__c/recordTypes/Management_Company_Name.recordType-meta.xml
<RecordType>
    <fullName>Management_Company_Name</fullName>
    <active>true</active>
    <label>Management Company Name</label>
</RecordType>