force-app/main/default/objects/Slowly_Changing_Dimension__c/recordTypes/NATSIFAC_Name.recordType-meta.xml
<RecordType>
    <fullName>NATSIFAC_Name</fullName>
    <active>true</active>
    <label>NATSIFAC Name</label>
</RecordType>