force-app/main/default/objects/Slowly_Changing_Dimension__c/recordTypes/Previous_Name.recordType-meta.xml
<RecordType>
    <fullName>Previous_Name</fullName>
    <active>true</active>
    <label>Contact Previous Name</label>
</RecordType>