force-app/main/default/objects/Slowly_Changing_Dimension__c/recordTypes/Provider_Name.recordType-meta.xml
<RecordType>
    <fullName>Provider_Name</fullName>
    <active>true</active>
    <label>Provider Name</label>
</RecordType>