force-app/main/default/objects/Slowly_Changing_Dimension__c/recordTypes/Service_Delivery_Organisation_Name.recordType-meta.xml
<RecordType>
    <fullName>Service_Delivery_Organisation_Name</fullName>
    <active>true</active>
    <label>Service Delivery Organisation Name</label>
</RecordType>