force-app/main/default/objects/Slowly_Changing_Dimension__c/recordTypes/Service_Name.recordType-meta.xml
<RecordType>
    <fullName>Service_Name</fullName>
    <active>true</active>
    <label>Service Name</label>
</RecordType>