force-app/main/default/objects/Slowly_Changing_Dimension__c/recordTypes/Trading_Name_SCD.recordType-meta.xml
<RecordType>
    <fullName>Trading_Name_SCD</fullName>
    <active>true</active>
    <label>Trading Name</label>
</RecordType>